--- a/assets/app.css
+++ b/assets/app.css
@@ -17,9 +17,9 @@ html, body {
 }
 
 
-md-toolbar h3 {
+md-toolbar h1,h3 {
   margin: auto;
-  font-weight: 500;
+  font-weight: 900;
 }
 
 /* Sidenav area */
